Adding more icons to legend

--- a/02_General_Map/general_map.html
+++ b/02_General_Map/general_map.html
@@ -120,11 +120,11 @@
         <span class="legend-label">Accidents (2018–2023)</span>
     </div>
     <div class="legend-row">
-        <img src="./img/SUBWAY_011.jpg" width="14" height="14" style="margin-right:8px;" alt="Tube icon" />
+        <img src="./img/noun-london-underground-1-01.jpg" width="14" height="14" style="margin-right:8px;" alt="Tube icon" />
         <span class="legend-label">Tube Stations</span>
     </div>
     <div class="legend-row">
-        <img src="./img/university.jpg" width="14" height="14" style="margin-right:8px;" alt="University icon" />
+        <img src="./img/graduate.jpg" width="14" height="14" style="margin-right:8px;" alt="University icon" />
         <span class="legend-label">Universities</span>
     </div>
 </div>
@@ -134,7 +134,7 @@
 
     const map = new mapboxgl.Map({
         container: 'map',
-        style: 'mapbox://styles/ailagrant23/cma8ou0ir00gy01slb5yi0te6/draft',
+        style: 'mapbox://styles/ailagrant23/cmaduf03h00qh01sd9t8834gr/draft',
         center: [-0.1275, 51.5072],
         zoom: 9.5
     });
