--- a/02_General_Map/general_map.html
+++ b/02_General_Map/general_map.html
@@ -1,36 +1,183 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <title>Mapbox Example 6- UK Flowmap 2011</title>
-    <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
+    <meta charset="utf-8"/>
+    <title>Mapbox Layer Toggle + Legend</title>
+    <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no"/>
 
-    <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v3.10.0/mapbox-gl.js"></script>
-    <link href="https://api.mapbox.com/mapbox-gl-js/v3.10.0/mapbox-gl.js" rel="stylesheet" />
+    <!-- Mapbox GL JS CSS -->
+    <link
+            href="https://api.mapbox.com/mapbox-gl-js/v3.10.0/mapbox-gl.css"
+            rel="stylesheet"
+    />
+    <!-- Mapbox GL JS -->
+    <script src="https://api.mapbox.com/mapbox-gl-js/v3.10.0/mapbox-gl.js"></script>
 
     <style>
-        body { margin: 0; padding: 0; }
-        #map { position: absolute; top: 0; bottom: 0; width: 100%; };
-    </style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
+        #map {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            width: 100%;
+        }
 
+        /* Sidebar Container */
+        #menu {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            width: 240px;
+            background-color: #FFFBCA; /* light yellow */
+            border: 2px solid #4635B1; /* dark purple */
+            border-radius: 8px;
+            padding: 12px;
+            font-family: sans-serif;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+            max-height: 80%;
+            overflow-y: auto;
+        }
+        #menu h4 {
+            margin: 0 0 10px;
+            font-size: 16px;
+            color: #4635B1;
+            text-align: center;
+        }
+        .layer-toggle {
+            display: flex;
+            align-items: center;
+            margin: 8px 0;
+        }
+        .layer-toggle input[type="checkbox"] {
+            width: 18px;
+            height: 18px;
+            accent-color: #4635B1;
+            cursor: pointer;
+        }
+        .layer-toggle label {
+            margin-left: 8px;
+            font-size: 14px;
+            color: #4635B1;
+            cursor: pointer;
+        }
+
+        /* Legend Container */
+        #legend {
+            position: absolute;
+            bottom: 30px;
+            left: 20px;
+            background-color: #FFFBCA; /* light yellow */
+            border: 2px solid #4635B1; /* dark purple */
+            border-radius: 8px;
+            padding: 12px;
+            font-family: sans-serif;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+            font-size: 14px;
+            max-width: 200px;
+        }
+        .legend-row {
+            display: flex;
+            align-items: center;
+            margin-bottom: 8px;
+        }
+        .legend-key {
+            width: 14px;
+            height: 14px;
+            margin-right: 8px;
+            flex-shrink: 0;
+        }
+        .legend-label {
+            line-height: 14px;
+            color: #4635B1;
+        }
+    </style>
 </head>
 
-
 <body>
-
 <div id="map"></div>
+
+<!-- Sidebar -->
+<div id="menu">
+    <h4>Toggle Layers</h4>
+    <!-- checkboxes injected here -->
+</div>
+
+<!-- Legend -->
+<div id="legend">
+    <div class="legend-row">
+        <span class="legend-key" style="background: #4CAF50; border-radius:2px;"></span>
+        <span class="legend-label">Cycle Network</span>
+    </div>
+    <div class="legend-row">
+        <img src="./img/3_(7).jpg" width="14" height="14" style="margin-right:8px;" alt="Parking icon" />
+        <span class="legend-label">Cycle Parking</span>
+    </div>
+    <div class="legend-row">
+        <span class="legend-key" style="background: #B71C1C; border-radius:50%;"></span>
+        <span class="legend-label">Accidents (2018–2023)</span>
+    </div>
+    <div class="legend-row">
+        <img src="./img/noun-london-underground-1-01.jpg" width="14" height="14" style="margin-right:8px;" alt="Tube icon" />
+        <span class="legend-label">Tube Stations</span>
+    </div>
+    <div class="legend-row">
+        <img src="./img/graduate.jpg" width="14" height="14" style="margin-right:8px;" alt="University icon" />
+        <span class="legend-label">Universities</span>
+    </div>
+</div>
 
 <script>
     mapboxgl.accessToken = 'pk.eyJ1IjoiYWlsYWdyYW50MjMiLCJhIjoiY202ODRuZmFjMDl4OTJtcjNvNnY1anoydiJ9.IwkY6zSc0skaG5Rrsb_Bog';
 
-    var map = new mapboxgl.Map({
-        container: 'map', // container id
-        style: 'mapbox://styles/ailagrant23/cma8ou0ir00gy01slb5yi0te6', // stylesheet location
-        center: [-0.25, 51.2], // starting position [lng, lat]
-        zoom: 8 // starting zoom
+    const map = new mapboxgl.Map({
+        container: 'map',
+        style: 'mapbox://styles/ailagrant23/cmaduf03h00qh01sd9t8834gr/draft',
+        center: [-0.1275, 51.5072],
+        zoom: 9.5
     });
 
-</script>
+    // Layers to toggle
+    const layers = [
+        { id: 'cycle-network-intersected-4326', name: 'Cycle Network' },
+        { id: 'cycle-parking-4326', name: 'Cycle Parking' },
+        { id: 'accident-2018-2023-4326', name: 'Accidents (2018–2023)' },
+        { id: 'underground-tube-stations-4326', name: 'Tube Stations' },
+        { id: 'higher-education-establishments-4326', name: 'Universities' }
+    ];
 
+    map.on('load', () => {
+        const menu = document.getElementById('menu');
+
+        layers.forEach(layer => {
+            // container for checkbox + label
+            const container = document.createElement('div');
+            container.className = 'layer-toggle';
+
+            // checkbox
+            const checkbox = document.createElement('input');
+            checkbox.type = 'checkbox';
+            checkbox.id = 'cb-' + layer.id;
+            checkbox.checked = true;
+
+            // label
+            const label = document.createElement('label');
+            label.htmlFor = checkbox.id;
+            label.textContent = layer.name;
+
+            // toggle layer visibility on change
+            checkbox.addEventListener('change', () => {
+                const visibility = checkbox.checked ? 'visible' : 'none';
+                map.setLayoutProperty(layer.id, 'visibility', visibility);
+            });
+
+            container.appendChild(checkbox);
+            container.appendChild(label);
+            menu.appendChild(container);
+        });
+    });
+</script>
 </body>
 </html>
