Adding Start Here page as index.html

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;670&family=Rubik:wght@400;440&display=swap" rel="stylesheet">
 
     <!-- Navigation bar CSS -->
-    <link rel="stylesheet" href="../00_Nav_Bar/nav_bar.css">
+    <link rel="stylesheet" href="00_Nav_Bar/nav_bar.css">
     <!-- Navigation bar JS -->
-    <script defer src="../00_Nav_Bar/nav_bar.js"></script>
+    <script defer src="00_Nav_Bar/nav_bar.js"></script>
 
     <style>
         :root {
