adjust nav bar due to new directory structure

--- a/00_Nav_Bar/nav_bar.html
+++ b/00_Nav_Bar/nav_bar.html
@@ -23,7 +23,7 @@
     <div class="nav-bar">
       <div class="nav-title">London CycleNet</div>
       <div class="nav-links">
-        <a href="#">Start Here</a>
+        <a href="../index.html">Start Here</a>
         <a href="../02_General_Map/general_map.html">Overview</a>
         <a href="../03_Student_Map/student_map.html">For Students</a>
         <a href="../04_For_Planners/planner_map.html">For Planners</a>
@@ -32,10 +32,12 @@
         <a
           href="https://github.com/Aprilmiaoyilee/casa0003_group.git"
           target="_blank"
-          ><img
+        >
+          <img
             src="https://github.githubassets.com/assets/GitHub-Mark-ea2971cee799.png"
             alt="GitHub"
-        /></a>
+          />
+        </a>
       </div>
     </div>
   </body>
